--- a/src/sass/components/_info.scss
+++ b/src/sass/components/_info.scss
@@ -13,6 +13,7 @@
         display: block;
         white-space: normal;
         overflow-wrap: break-word;
+        word-wrap: break-word;
     }
     &-title.i-block,
     &-description.i-block {
