--- a/src/sass/components/_portfolio.scss
+++ b/src/sass/components/_portfolio.scss
@@ -60,7 +60,7 @@ $portfolio-item-buttons__btn__font-size: 0.9em !default;
         transition: 0.3s height ease-in-out;
     }
     &-item {
-        width: 33.33333%;
+        //width: 33.33333%;
         height: 250px;
         position: relative;
         padding: 10px;
