--- a/src/templates/components/sections/_about-me-information-contact.pug
+++ b/src/templates/components/sections/_about-me-information-contact.pug
@@ -4,7 +4,7 @@
 .about-me-section
     header.row.no-gutters.align-items-center.about-me-section-header
         span.icon.icon-15.icon-info.about-me-section-icon
-        span.filling-line
+        span.filling-line.beginning-xs
         h3.heading.heading-4.text-center
             | #{data.mainWrapper.aboutMeWrapper.informationContact.h3[0]}
             br
