--- a/src/templates/components/sections/_about-me-profile.pug
+++ b/src/templates/components/sections/_about-me-profile.pug
@@ -9,7 +9,7 @@ figure.dev-face__wrapper
 .about-me-section
     header.row.no-gutters.align-items-center.about-me-section-header
         span.icon.icon-15.icon-user.about-me-section-icon
-        span.filling-line
+        span.filling-line.beginning-xs
         h3.heading.heading-4.text-center= data.mainWrapper.aboutMeWrapper.profile.h3
         span.filling-line.ending
     .about-me-section-body
