--- a/src/templates/layout/_footer.pug
+++ b/src/templates/layout/_footer.pug
@@ -4,7 +4,7 @@
 footer.main-footer
     .container
         .row
-            .col-4
+            .col-12.col-md-4
                 h3.heading.heading-5.white.text-center= data.mainFooter.recommendedProjects.h3
                 .heading-separator
                     .heading-separator__line.heading-separator__line-reduced-2.heading-separator__line-bolded-3.accent
@@ -19,7 +19,7 @@ footer.main-footer
                         a(href="#" class="main-footer__link") Lorem ipsum ...
                     li
                         a(href="#" class="main-footer__link") Lorem ipsum ...
-            .col-4
+            .col-12.col-md-4
                 h3.heading.heading-5.white.text-center= data.mainFooter.recentChanges.h3
                 .heading-separator
                     .heading-separator__line.heading-separator__line-reduced-2.heading-separator__line-bolded-3.accent
@@ -34,7 +34,7 @@ footer.main-footer
                         a(href="#" class="main-footer__link") Lorem ipsum ...
                     li
                         a(href="#" class="main-footer__link") Lorem ipsum ...
-            .col-4.row.flex-column
+            .col-12.col-md-4.row.no-gutters.flex-column
                 h3.heading.heading-5.white.text-center= data.mainFooter.findMe.h3
                 .heading-separator
                     .heading-separator__line.heading-separator__line-reduced-2.heading-separator__line-bolded-3.accent
