--- a/src/sass/components/_about-me.scss
+++ b/src/sass/components/_about-me.scss
@@ -27,6 +27,11 @@ $about-me-list-titled__after__border: 40px solid $accent-color-light !default;
             padding-bottom: 15px;
         }
         &-icon {
+            @include media-breakpoint-down(xs) {
+                width: 100%;
+                text-align: center;
+                margin: 25px 0 20px; // ?
+            }
             &::before {
                 width: 54px;
                 height: 54px;
@@ -41,6 +46,9 @@ $about-me-list-titled__after__border: 40px solid $accent-color-light !default;
         }
         &-body {
             padding-left: 89px;
+            @include media-breakpoint-down(xs) {
+                padding-left: 0;
+            }
         }
     }
     &-list {
