--- a/src/sass/components/_contact.scss
+++ b/src/sass/components/_contact.scss
@@ -80,6 +80,9 @@ $contact-info__list__li__border-bottom: 1px solid $divider-color !default;
             display: block;
             border-width: 2px;
             margin: 25px auto 0;
+            @include media-breakpoint-down(sm) {
+                width: 100%;
+            }
         }
         &-loading {
             @extend %loading;
