--- a/src/sass/components/_dev-face.scss
+++ b/src/sass/components/_dev-face.scss
@@ -19,6 +19,9 @@ $dev-face__profession__font-weight: $font-weight__bolder !default;
     &__wrapper {
         padding: 25px 0 10px 89px;
         margin: 0;
+        @include media-breakpoint-down(xs) {
+            padding-left: 0;
+        }
     }
     &__img {
         border-radius: 50%;
