--- a/src/templates/components/sections/_portfolio.pug
+++ b/src/templates/components/sections/_portfolio.pug
@@ -29,7 +29,7 @@ section(id="portfolio" class="section portfolio-wrapper")
                     each obj, property in data.mainWrapper.portfolioWrapper.projects
                         if property !== "categories"
                             each project in obj
-                                div(data-type=property class="portfolio-item")
+                                div(data-type=property class="portfolio-item col-xl-4 col-lg-4 col-md-6 col-sm-6")
                                     figure(tabindex="0" class="portfolio-item__figure")
                                         img(src=project.imgSrc alt=project.imgAlt class="portfolio-item__img")
                                         figcaption.portfolio-item__figcaption.text-center
