--- a/src/sass/components/_services.scss
+++ b/src/sass/components/_services.scss
@@ -1,81 +1,38 @@
-//++++++++++++++++++++++++//
-//++++++* SERVICES *++++++//+
-//++++++++++++++++++++++++//
+//~~~~~~~~~~~~~~~~~~~~~~~~//
+//~~~~~~~ SERVICES ~~~~~~~//+
+//~~~~~~~~~~~~~~~~~~~~~~~~//
 
 
 // .services-1-item
-$services-1-item__background-color-0: darken($color__white, 1.05%) !default;
+$services-1-item__background-color-0: $color__white !default;
 $services-1-item__border: 1px solid rgba($color__black-1, 0.1) !default;
-// .owl-carousel-services .center .services-1-item
-$services-1-item__background-color-1: $color__white !default;
-
-// .owl-carousel-services .center .services-1-item-icon
-$services-1-item-icon__color-1: $primary-color !default;
-
-// .owl-carousel-services .center .services-1-item-heading-separator__line
-$services-1-item-heading-separator__line__background-color-1: $primary-color !default;
-
-// .owl-carousel-services .center .services-1-item-button
-$services-1-item-button__color-1: $primary-color !default;
-$services-1-item-button__border-color-1: $primary-color !default;
-
-// .owl-carousel-services .center .services-1-item-button:hover
-$services-1-item-button__hover__color-1: $color__white !default;
-
-// .owl-carousel-services .center .services-1-item-button:hover::after
-$services-1-item-button__hover__after__border-color-1: $primary-color !default;
 
 
 .services {
     &-wrapper {
         padding-bottom: 157px;
     }
-    &-1-item {
+    &-item {
+        width: 305px;
         background-color: $services-1-item__background-color-0;
         border: $services-1-item__border;
         padding: 25px;
-        margin: 50px 32.5px;
-        transition: 0.3s background-color ease-in-out, 0.3s padding ease-in-out, 0.3s margin ease-in-out;
-        @include media-breakpoint-down(lg) {
-            
-        }
-        .owl-carousel-services .center > & {
-            background-color: $services-1-item__background-color-1;
-            padding: 40px;
-            margin: 35px 17.5px;
-        }
+        margin: 50px auto;
         &-icon {
             width: 100%;
             height: 115px;
             display: block;
-            transition: 0.3s color ease-in-out;
-            .owl-carousel-services .center & {
-                color: $services-1-item-icon__color-1;
-            }
         }
         &-title {
             margin-top: 15px;
         }
-        &-heading-separator__line {
-            .owl-carousel-services .center & {
-                background-color: $services-1-item-heading-separator__line__background-color-1;
-            }
+        &-description {
+            
         }
         &-button {
             background-color: transparent;
             display: block;
             margin: 25px auto 0;
-            transition: 0.3s color ease-in-out, 0.3s border-color ease-in-out;
-            .owl-carousel-services .center & {
-                color: $services-1-item-button__color-1;
-                border-color: $services-1-item-button__border-color-1;
-                &:hover {
-                    color: $services-1-item-button__hover__color-1;
-                    &::after {
-                        background-color: $services-1-item-button__hover__after__border-color-1;
-                    }
-                }
-            }
         }
     }
 }
